Changes in Version 2.2.0 (2018-09-18)
=====================================
- Added support for separately compositing measures of constructs and the constructs' facets. Arguments for 'facet_x' and 'facet_y' have been added to ma_r() and ma_d() so that more comprehensive output tables can be generated.

- Stability fixes for data management within the ma_r() function.


Changes in Version 2.1.12 (2018-09-07)
=====================================
- Bug fix for managing reliability types that have been incidentally converted from characters into factors.


Changes in Version 2.1.11 (2018-08-30)
=====================================
- Bug fix for create_ad() with interactive method when all sample sizes are NA.
 
- Bug fix for ma_r_ad() with individual artifact distributions supplied. 


Changes in Version 2.1.10 (2018-08-24)
=====================================
- Bug fix for using output of metabulate() in Rmarkdown documents. 

- Bug fix for meta-analyses of effect sizes that have been averaged or composited. 


Changes in Version 2.1.9 (2018-08-22)
=====================================
- Increased the stability of artifact-distribution meta-analyses with moderators computed using the ma_r() function. 

- Bug fix for the get_ad() function to appropriately handle artifact-distribution objects that contain no artifact information. 


Changes in Version 2.1.8 (2018-08-21)
=====================================
- Updated and corrected the text displayed in table notes produced by the metabulate() function. 

- Bug fix for handling meta-analyses with only one effect size. 


Changes in Version 2.1.7 (2018-07-16)
=====================================
- Removed package 'fungible' as a dependency, as 'fungible' was archived and removed from CRAN on 2018-07-15.

- Bug fixes and improvements to format_num() and metabulate() for handling leading zeros.


Changes in Version 2.1.6 (2018-07-12)
=====================================